# adaside

./: CMakeLists.txt  README.md
gnat/: ada_output.gpr  ada_side.gpr  api_extractor.gpr  config.gpr.in  extractor.gpr  libclang.gpr
sources/binding/: abstract_meta_argument_lists.adb  abstract_meta_argument_lists.ads  abstract_meta_arguments.adb  abstract_meta_arguments.ads  abstract_meta_attributes.adb  abstract_meta_attributes.ads  abstract_meta_class_lists.adb  abstract_meta_class_lists.ads  abstract_meta_classes.adb  abstract_meta_classes.ads  abstract_meta_enum_lists.adb  abstract_meta_enum_lists.ads  abstract_meta_enums.adb  abstract_meta_enums.ads  abstract_meta_field_lists.adb  abstract_meta_field_lists.ads  abstract_meta_fields.adb  abstract_meta_fields.ads  abstract_meta_function_lists.adb  abstract_meta_function_lists.ads  abstract_meta_functions.adb  abstract_meta_functions.ads  abstract_meta_type_lists.adb  abstract_meta_type_lists.ads  abstract_meta_types.adb  abstract_meta_types.ads  abstract_meta_variables.adb  abstract_meta_variables.ads  abstractmetaarg_wrapper.cpp  abstractmetaarg_wrapper.h  abstractmetaarglist_wrapper.cpp  abstractmetaarglist_wrapper.h  abstractmetaattributes_wrapper.cpp  abstractmetaattributes_wrapper.h  abstractmetaclass_wrapper.cpp  abstractmetaclass_wrapper.h  abstractmetaclasslist_wrapper.cpp  abstractmetaclasslist_wrapper.h  abstractmetaenum_wrapper.cpp  abstractmetaenum_wrapper.h  (+36 more)
sources/extractor/: base_visitors.ads  clang-cursors-xrefs.adb  clang-cursors-xrefs.ads  clang-cursors.adb  clang-cursors.ads  clang-files.adb  clang-files.ads  clang-locations.adb  clang-locations.ads  clang-translation_units.adb  clang-translation_units.ads  clang.adb  clang.ads  clang_utilities.adb  clang_utilities.ads  code_model-builders.adb  code_model-builders.ads  code_model-classes.ads  code_model-files.ads  code_model-models.adb  code_model-models.ads  code_model-namespaces.adb  code_model-namespaces.ads  code_model-scopes.adb  code_model-scopes.ads  code_model.ads  extractor_driver.adb  meta_model.ads
sources/generator/: ada_side-config.ads.in  ada_side-driver.adb  ada_side-generators-adas-value_api_spec.adb  ada_side-generators-adas-value_api_spec.ads  ada_side-generators-adas-value_body.adb  ada_side-generators-adas-value_body.ads  ada_side-generators-adas-value_internals_body.adb  ada_side-generators-adas-value_internals_body.ads  ada_side-generators-adas-value_internals_spec.adb  ada_side-generators-adas-value_internals_spec.ads  ada_side-generators-adas-value_spec.adb  ada_side-generators-adas-value_spec.ads  ada_side-generators-adas-values.adb  ada_side-generators-adas-values.ads  ada_side-generators-adas.adb  ada_side-generators-adas.ads  ada_side-generators-cxxs-value_cpp.adb  ada_side-generators-cxxs-value_cpp.ads  ada_side-generators-cxxs-value_h.adb  ada_side-generators-cxxs-value_h.ads  ada_side-generators-cxxs.adb  ada_side-generators-cxxs.ads  ada_side-generators-value_ada_body.adb  ada_side-generators-value_ada_body.ads  ada_side-generators-value_ada_spec.adb  ada_side-generators-value_ada_spec.ads  ada_side-generators-value_api_ada_spec.adb  ada_side-generators-value_api_ada_spec.ads  ada_side-generators.adb  ada_side-generators.ads  ada_side-output_test.adb  ada_side-outputs-accesses.adb  ada_side-outputs-accesses.ads  ada_side-outputs-applies.adb  ada_side-outputs-applies.ads  ada_side-outputs-aspects.adb  ada_side-outputs-aspects.ads  ada_side-outputs-clauses.adb  ada_side-outputs-clauses.ads  ada_side-outputs-declarations.adb  (+50 more)
sources/libclang/: Makefile  bits_types_h.ads  clang_c_buildsystem_h.ads  clang_c_cxerrorcode_h.ads  clang_c_cxstring_h.ads  clang_c_index_h.ads  stddef_h.ads  time_h.ads  xlocale_h.ads
sources/output/: ada_output_test.adb  ada_outputs-clauses.adb  ada_outputs-clauses.ads  ada_outputs-declarations.adb  ada_outputs-declarations.ads  ada_outputs-definitions.adb  ada_outputs-definitions.ads  ada_outputs-expressions.adb  ada_outputs-expressions.ads  ada_outputs-joins.adb  ada_outputs-joins.ads  ada_outputs-statements.adb  ada_outputs-statements.ads  ada_outputs-units.adb  ada_outputs-units.ads  ada_outputs.adb  ada_outputs.ads
